<resources>
    <string name="app_name">StayAtHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">user.email@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_my_request">My Requests</string>

    <string name="home_second">Home Second</string>
    <string name="log_out">Log out</string>
    <string name="create_request">Create Request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="forgot_password1">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account? <font fgcolor="#43669c"><b>Register</b></font></string>
    <string name="already_member">Already a member? <font fgcolor="#43669c"><b>Login</b></font></string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="Adhar_id">Aadhaar Id Number</string>
    <string name="pin_code">Pin Code</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="error_mobile_length">Please enter valid mobile no.</string>
    <string name="error_password">Please enter password</string>
    <string name="error_name">Please enter your full name</string>
    <string name="error_email">Please enter your email</string>
    <string name="error_email_pattern">Please enter a valid email</string>
    <string name="error_adhar">Please enter your valid Aadhaar Id</string>
    <string name="error_pin">Please Enter your postal code</string>
    <string name="error_password_length">Password should be min 6 character long</string>
    <string name="verify">verify</string>
    <string name="resend_otp">Didn\'t get otp? <font fgcolor="#43669c"><b>Resend otp</b></font></string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp">"Please enter OTP to complete verification "</string>
    <string name="error">error</string>
    <string name="successfull_send_otp">OTP send successfully</string>
    <string name="successfull_verify_otp">OTP verified</string>
    <string name="your_nearest_police_station">Your Nearest Police Station</string>
    <string name="your_pin_code">Your Pin Code</string>
    <string name="please_let_us_know_about_your_reason_to_go_out">Please let us know about your reason to go out</string>
    <string name="fill_start_and_end_time_recommended_1hr">Fill start and end time (Recommended 1hr) *</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="date">Date *</string>
    <string name="any_attachment_optional">Any attachment (Optional)</string>
    <string name="submit_request">Submit Request</string>
    <string name="mm_dd_yyyy">DD/MM/YYYY</string>
    <string name="reason">Reason *</string>
    <string name="id">ID:</string>
    <string name="request">Create request to your local police station before leaving out from home\n\nStay home, stay safe</string>
    <string name="no_request_yet">No request yet !!</string>
    <string name="to">" - "</string>
    <string name="otp_not_verified">Invalid OTP</string>
    <string name="atert">Alert</string>
    <string name="alert_body">Your local police station is no longer registered with this application. Plese contact with your local police station.</string>
    <string name="ok">OK</string>
    <string name="alert_title">Alert</string>
    <string name="alert_location_body">You have to enable location permission to continue.</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_mobile_associate_account">Enter the mobile number associated with your account</string>
    <string name="new_password">New Password</string>
    <string name="re_password">Re-enter Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_not_match">Password does not match</string>
    <string name="already_verified">Already verified</string>
    <string name="alert_mock_location_body">Stop using mock location.</string>
</resources>
