<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="clickHandler"
            type="com.example.stayathome.ui.reset_password.ChangePasswordViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header"
            android:background="@drawable/curve_backgrund">

            <ImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/ic_stay_home" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="12dp"
                android:padding="12dp"
                android:text="@string/forgot_password1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/enter_mobile_associate_account"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/background_dark" />


            <LinearLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="12dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <EditText
                        android:id="@+id/et_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edittext"
                        android:drawableStart="@drawable/ic_vpn_key"
                        android:drawableLeft="@drawable/ic_vpn_key"
                        android:drawablePadding="20dp"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:padding="6dp"
                        android:textColor="@color/background_dark" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorAccent">

                    <EditText
                        android:id="@+id/et_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_edittext"
                        android:drawableStart="@drawable/ic_vpn_key"
                        android:drawableLeft="@drawable/ic_vpn_key"
                        android:drawablePadding="20dp"
                        android:hint="@string/re_password"
                        android:inputType="textPassword"
                        android:padding="6dp"
                        android:textColor="@color/background_dark" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/send_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/input_layout"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/button_background"
                android:text="@string/change_password"
                android:textColor="@android:color/white"
                android:onClick="@{() -> clickHandler.clickOnChangePassword()}"/>
        </RelativeLayout>

    </LinearLayout>
</layout>